updated to add terraform and file restructure

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,29 @@ go.work.sum
 # Editor/IDE
 # .idea/
 # .vscode/
+
+
+# Local .terraform directories
+**/.terraform/*
+
+# Terraform state files
+*.tfstate
+*.tfstate.*
+
+# Crash log files
+crash.log
+crash.*.log
+
+# Sensitive variable files
+*.tfvars
+*.tfvars.json
+
+# Override files (developer-specific)
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# CLI configuration files
+.terraformrc
+terraform.rc
