qupdated docker to include migrations

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,7 +2,6 @@
 
 # Build stage
 FROM golang:1.24-alpine AS builder
-
 WORKDIR /app
 
 # Copy go.mod and go.sum first to leverage caching
@@ -18,15 +17,23 @@ RUN go build -o standup-logger ./cmd/app/main.go
 # Run stage
 FROM alpine:latest
 
-RUN apk add --no-cache ca-certificates
+# tools needed at runtime for migrations
+RUN apk add --no-cache ca-certificates curl make \
+ && curl -sSL https://github.com/golang-migrate/migrate/releases/download/v4.17.0/migrate.linux-amd64.tar.gz \
+ |  tar -xz -C /usr/local/bin
 
 WORKDIR /app
 
 # Copy from correct path in builder stage
 COPY --from=builder /app/standup-logger .
 
+# copy migrations + Makefile so `make migrate` can run inside container
+COPY db/migrations /app/db/migrations
+COPY Makefile /app/Makefile
+
 EXPOSE 8080
 
 ENV ENVIRONMENT=production
 
+# default: run web server (override for migrations)
 CMD ["./standup-logger"]
