--- a/ansible/roles/deploy/tasks/main.yml
+++ b/ansible/roles/deploy/tasks/main.yml
@@ -1,25 +1,105 @@
-- name: Ensure Docker installed
+# roles/deploy/tasks/main.yml
+# Installs Docker CE from the official repository and deploys your stack.
+
+- name: Remove malformed Docker sources list if present
+  become: true
+  ansible.builtin.file:
+    path: /etc/apt/sources.list.d/docker.list
+    state: absent
+
+- name: Remove conflicting Docker or containerd packages
+  become: true
   apt:
     name:
       - docker.io
-      - docker-compose-plugin
+      - containerd
+      - containerd.io
+    state: absent
+    purge: true
+
+- name: Install prerequisite packages
+  become: true
+  apt:
+    name:
+      - ca-certificates
+      - curl
+      - gnupg
     state: present
     update_cache: true
 
-- name: Copy docker-compose.yml
-  copy:
+- name: Add Docker GPG key
+  become: true
+  ansible.builtin.shell: |
+    set -o pipefail
+    install -m 0755 -d /etc/apt/keyrings
+    curl -fsSL https://download.docker.com/linux/ubuntu/gpg \
+      | gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+    chmod a+r /etc/apt/keyrings/docker.gpg
+  args:
+    creates: /etc/apt/keyrings/docker.gpg
+
+- name: Add Docker repository
+  become: true
+  ansible.builtin.shell: |
+    set -o pipefail
+    ARCH=$(dpkg --print-architecture)
+    RELEASE=$(. /etc/os-release && echo "$VERSION_CODENAME")
+    echo "deb [arch=${ARCH} signed-by=/etc/apt/keyrings/docker.gpg] \
+    https://download.docker.com/linux/ubuntu ${RELEASE} stable" \
+          | tee /etc/apt/sources.list.d/docker.list > /dev/null
+  args:
+    creates: /etc/apt/sources.list.d/docker.list
+    executable: /bin/bash
+
+- name: Install Docker CE packages
+  become: true
+  apt:
+    update_cache: true
+    name:
+      - docker-ce
+      - docker-ce-cli
+      - containerd.io
+      - docker-buildx-plugin
+      - docker-compose-plugin
+    state: present
+
+# --- after Install Docker CE packages ---
+
+- name: Ensure /opt/standup directory exists
+  become: true
+  ansible.builtin.file:
+    path: /opt/standup
+    state: directory
+    owner: root
+    group: root
+    mode: '0755'
+    recurse: true
+    force: true
+
+- name: Copy docker-compose.yml to target host
+  become: true
+  ansible.builtin.copy:
     src: docker-compose.yml
     dest: /opt/standup/docker-compose.yml
     owner: root
     group: root
     mode: '0644'
 
-- name: Pull latest image
+- name: Log in to GitHub Container Registry
+  become: true
+  community.docker.docker_login:
+    registry_url: ghcr.io
+    username: "{{ ghcr_username }}"
+    password: "{{ ghcr_token }}"
+
+- name: Pull latest application image
+  become: true
   community.docker.docker_image:
-    name: ghcr.io/alikazai/standup-app:latest
+    name: ghcr.io/alikazai/standup-logger-app:latest
     source: pull
 
 - name: Deploy stack with Docker Compose v2
+  become: true
   community.docker.docker_compose_v2:
     project_src: /opt/standup
     state: present
