--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           go-version: "1.22"
 
-      # Optional: Run tests before building
+      # Run tests before building
       # - name: Run unit tests
       #   run: go test ./...
 
