--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,7 +1,10 @@
----
 - hosts: all
   become: true
   vars_files:
     - vars/vault.yml
+  vars:
+    ansible_connection: ssh
+    ansible_host: 127.0.0.1
+    ansible_port: "{{ ansible_port | default(22) }}"
   roles:
     - deploy
